Web-service et application web
Service web :
création du service pour manipuler les données de la table "compte".
Refactoring effectué sur la méthode "AddCompte" de la classe "CompteEndpoint" et sur le WSDL dans la partie "SERVICE COMPTE" élément "addCompteRequest" .

Application web :
j'ai testé les différents services proposés par le service compte ( création d'un formulaire de test pour enregistrer un nouvel utilisateur, et suppression d'un utilisateur).

--- a/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/livres.html
+++ b/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/livres.html
@@ -14,9 +14,24 @@
     <title>Title</title>
 </head>
 <body>
+
+<div class="container">
     <p th:text="'Bonjour ' + ${personne} + ' ' + ${nom}"></p>
-<!--    <p th:text="'Nom d\'un livre' + ${livre}"></p>-->
+    <!--    <p th:text="'Nom d\'un livre' + ${livre}"></p>-->
     <a type="button" class="btn btn-primary" th:href="@{test}">Test</a>
-<p>Bonjour</p>
+    <a type="button" class="btn btn-primary" th:href="@{compte}">COMPTE</a>
+    <a type="button" class="btn btn-primary" th:href="@{formCompte}">ADD COMPTE</a>
+</div>
+
+<div class="container">
+    <form action="#" th:action="@{addCompte}" method="POST">
+        <label>Créer un compte utilisateur</label>
+        <input type="text"/>
+        <button class="btn btn-primary">Validez</button>
+    </form>
+</div>
+
+
+
 </body>
 </html>
