--- a/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/msg.html
+++ b/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/msg.html
@@ -36,6 +36,62 @@
             </tbody>
         </table>
     </div>
+    <div class="container-fluid">
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Nom</th>
+                <th scope="col">Prenom</th>
+                <th scope="col">Adresse</th>
+                <th scope="col">Code postal :</th>
+                <th scope="col">Ville</th>
+                <th scope="col">E-Mail :</th>
+                <th scope="col">Num domicile</th>
+                <th scope="col">Num portable</th>
+                <th scope="col">Num carte bibliotheque </th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="compte : ${compte}">
+                <td th:text="${compte.getId()}"/>
+                <td th:text="${compte.getNom()}"/>
+                <td th:text="${compte.getPrenom()}"/>
+                <td th:text="${compte.getAdresse()}"/>
+                <td th:text="${compte.getCodePostal()}"/>
+                <td th:text="${compte.getVille()}"/>
+                <td th:text="${compte.getMail()}"/>
+                <td th:text="${compte.getNumDomicile()}"/>
+                <td th:text="${compte.getNumPortable()}"/>
+                <td th:text="${compte.getNumCarteBibliotheque()}"/>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="container">
+        <form action="#" th:action="@{addCompte}" th:object="${compteType}" method="post">
+            <label>Créer un compte utilisateur</label>
+            <input type="text" th:field="*{nom}" />
+            <input type="text" th:field="*{prenom}" />
+            <input type="text" th:field="*{adresse}" />
+            <input type="number" th:field="*{codePostal}" />
+            <input type="text" th:field="*{ville}" />
+            <input type="number" th:field="*{numPortable}" />
+            <input type="number" th:field="*{numDomicile}" />
+            <input type="number" th:field="*{numCarteBibliotheque}" />
+            <input type="text" th:field="*{mail}" />
+            <input type="text" th:field="*{motDePasse}" />
+            <button type="submit" class="btn btn-primary">Validez</button>
+        </form>
+    </div>
+
+    <div class="container">
+        <form action="#" th:action="@{delCompte}" th:object="${compteType}" method="post">
+            <input type="number" th:field="*{id}"/>
+            <button type="submit" class="btn btn-primary">Supprimez</button>
+        </form>
+    </div>
 </section>
 
 </body>
