--- a/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/layout.html
+++ b/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/layout.html
@@ -33,6 +33,9 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{ouvrages}">Livres</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/login}">Login</a>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
