application web - Spring security
application web :
Le test d'authentification d'un utilisateur récupéré via le web-service fonctionne, ainsi que l'ajout et la manipulation du rôle attribué à celui-ci.

Il reste à présent à réorganiser le code...

--- a/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/login/login.html
+++ b/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/login/login.html
@@ -22,7 +22,7 @@
 
 <div layout:fragment = "content">
 
-<form th:action="@{/}" method="post">
+<form th:action="@{/login}" method="post">
     <div>
         <label>Username</label>
         <input type="text" name="username"/>
@@ -31,8 +31,9 @@
         <label>Password</label>
         <input type="password" name="password"/>
     </div>
-    <button type="submit">Login</button>
+    <input type="submit" value="Login"/>
 </form>
+
 </div>
 
 </body>
