--- a/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/ouvrage/ouvrageList.html
+++ b/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/ouvrage/ouvrageList.html
@@ -43,7 +43,7 @@
                                     </a>
                                 </p>
                             </th:block>
-                            <p><a class="nav-link" href="#" th:href="@{/secured/ouvrage(ouvrageId=${ouvrage.getId()})}">Afficher détail</a></p>
+                            <p><a class="nav-link" href="#" th:href="@{/ouvrage(ouvrageId=${ouvrage.getId()})}">Afficher détail</a></p>
                         </div>
                     </div>
                 </div>
