--- a/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/static/css/style.css
+++ b/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/static/css/style.css
@@ -14,13 +14,14 @@
 
 #vignette {
     padding-top: 1%;
+    margin-left: 10px;
     margin-top: 5px;
     border-style: solid;
     border-color: #DCDCDC;
     border-width: 1px;
 }
 
-#resumer{
+.ligneVerticaleGauche{
 
     border-style: solid;
     border-bottom: white;
@@ -43,6 +44,54 @@ div hr {
     border-color: #DCDCDC;
     border-width: 1px;
 }
+
+.red {
+    color: red;
+}
+.navMenuCompte{
+    display: block;
+    width: 100%;
+    height: 5%;
+    text-align: start;
+}
+
+.stylLigneVerticaleDroite{
+    border-style: solid;
+    border-bottom: white;
+    border-top: white;
+    border-left: white;
+    border-color: #DCDCDC;
+    border-width: 1px;
+}
+
+.styleNavLayout{
+    width: 100px;
+    text-align: center;
+}
+
+.styleTitreDiv{
+    margin: auto;
+}
+
+.styleTitre{
+    text-align: center;
+}
+
+.styleAfficheNomUser{
+    text-align: center;
+    color: #28a745;
+}
+
+.styleGradientLayout{
+    background-image: radial-gradient(circle at top left, white, #DCDCDC);
+}
+
+
+
+
+
+
+
 
 
 
