--- a/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/ouvrage/ouvrageDetail.html
+++ b/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/ouvrage/ouvrageDetail.html
@@ -21,7 +21,7 @@
 
 <div layout:fragment = "content">
 
-    <div id="contenaireOuvrageDetail"  class="container">
+    <div id="contenaireOuvrageDetail" class="container">
         <div class="row">
 
             <div class="col col-md-12">
@@ -35,20 +35,22 @@
                 </th:block>
             </div>
 
-            <div id="resumer" class="col col-md-7">
+            <div id="resumer" class="col col-md-7 ligneVerticaleGauche">
+
                 <p th:text="${ouvrageDetail.getResumer()}"></p>
+                <hr/>
                 <p th:text="'Editeur : ' + ${ouvrageDetail.getEditeur()}"></p>
                 <p th:text="'Genre : ' + ${ouvrageDetail.getGenre()}"></p>
                 <p th:text="'EAN : ' + ${ouvrageDetail.getRef()}"></p>
+                <hr/>
+                <p>Pour cette ouvrage <span th:text="${#arrays.length(livreTypeListDispo)}"></span> livre(s) sont/est disponible(s)</p>
+                <th:block th:each="livre : ${livreTypeListDispo}">
+                    <p th:text="'Référence du livre : ' + ${livre.getRefBibliotheque()}"></p>
+                </th:block>
+
             </div>
         </div>
 
-        <div class="col col-md-12">
-            <th:block th:each="livre : ${ouvrageDetail.getLivres()}">
-                <p th:text="${livre.getStatut()}"></p>
-            </th:block>
-
-        </div>
     </div>
 
 
