--- a/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/compte/emprunt.html
+++ b/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/compte/emprunt.html
@@ -20,10 +20,6 @@
 
 <body>
 
-<th:block th:each="emprunt : ${empruntTypeList}">
-    <p th:text="${emprunt.dateDebut}"></p>
-</th:block>
-
 <div layout:fragment = "content">
 
     <div class="container-fluid">
@@ -38,19 +34,52 @@
                 </div>
 
                 <div class="row justify-content-center" style="margin-top: 2%">
-                    <div class="col col-md-11">
-                        <div th:each="empruntList : ${empruntTypeList}">
-                            <div th:each="livreList : ${livreTypeList}">
-                                <div th:each="ouvrageList : ${ouvrageTypeList}">
-                                    <div th:each="photo : ${ouvrageList.getPhotos()}">
-                                        <ul>
-                                            <li>
-                                                <img th:src="${photo.getUrlPhoto()}" class="rounded float-left" alt="...">
-                                            </li>
-                                        </ul>
+                    <div class="col col-md-10">
+                        <div th:each="emprunt : ${empruntTypeList}">
+                            <table class="table">
+                                <tbody>
+
+                                <div th:each="livre : ${livreTypeList}">
+                                    <div th:each="ouvrage : ${ouvrageTypeList}">
+                                        <div th:each="photo : ${ouvrage.getPhotos()}">
+                                            <th:block th:if="${photo.getOuvrageId() == ouvrage.getId()
+                                                    && livre.getOuvrageId() == ouvrage.getId() && emprunt.getLivreId() == livre.getId()}">
+                                                <td style="width: 10%">
+                                                    <img th:src="${photo.getUrlPhoto()}" style="width: 150px; height: 200px" class="rounded float-left" alt="...">
+                                                </td>
+                                            </th:block>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                                <div th:each="livre : ${livreTypeList}">
+                                    <div th:each="ouvrage : ${ouvrageTypeList}">
+                                        <th:block th:if="${livre.getOuvrageId() == ouvrage.getId() && emprunt.getLivreId() == livre.getId()}">
+                                            <td style="width: 30%">
+                                                <h6>OUVRAGE</h6>
+                                                <p th:text="'Titre : ' + ${ouvrage.getTitre()}"></p>
+                                                <p th:text="'Auteur : ' + ${ouvrage.getAuteur()}"></p>
+                                            </td>
+                                        </th:block>
+                                    </div>
+                                </div>
+                                <div th:each="livre : ${livreTypeList}">
+                                    <th:block th:if="${emprunt.getLivreId() == livre.getId()}">
+                                        <td style="width: 30%">
+                                            <h6>REFERENCE BILIOTHEQUE</h6>
+                                            <p th:text="'Référence du livre : ' + ${livre.getRefBibliotheque()}"></p>
+
+                                            <h6>DATES D'EMPRUNT</h6>
+                                            <p th:text="'Date de début : ' + ${emprunt.getDateDebut()} "></p>
+                                            <p th:text="'Date de fin : ' + ${emprunt.getDateFin()}"></p>
+                                        </td>
+                                    </th:block>
+                                </div>
+                                <td style="width: 30%">
+                                    <p><a class="btn btn-outline-primary" href="#" th:href="@{/prolongation(empruntId=${emprunt.getId()})}">PROLONGER</a></p>
+                                    <small>Attention vous pouvez polonger votre emprunt pour 4 semaines suplémentaire une seul fois !</small>
+                                </td>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -59,6 +88,5 @@
     </div>
 </div>
 
-</div>
 </body>
 </html>
