--- a/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/compte/infoPerso.html
+++ b/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/compte/infoPerso.html
@@ -142,7 +142,7 @@
                                             </div>
                                         </div>
                                         <hr/>
-                                        <button class="btn btn-success" type="submit">Submit form</button>
+                                        <button class="btn btn-success" type="submit">VALIDEZ</button>
                                     </form>
                                 </div>
                             </div>
