Application web - Menu - Logback - Error 404
Application web :
Création d'un menu pour sélectionner par "auteur" ou par "genre" les ouvrages.
Création de la page d'erreur qui redirige l'utilisateur s'il ne peut pas accéder à la page.

Logback :
La mise en place d'un système de log  est actuellement en cours de développement.

--- a/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/static/css/style.css
+++ b/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/static/css/style.css
@@ -62,6 +62,8 @@ div hr {
     border-left: white;
     border-color: #DCDCDC;
     border-width: 1px;
+    opacity: 100%;
+
 }
 
 .styleNavLayout{
@@ -85,6 +87,10 @@ div hr {
 .styleGradientLayout{
     background-image: radial-gradient(circle at top left, white, #DCDCDC);
 }
+
+
+
+
 
 
 
