--- a/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/fragments/menuCompte.html
+++ b/oc-bibliotheque-webapplication/bibliotheque-webapp/src/main/resources/templates/fragments/menuCompte.html
@@ -25,7 +25,7 @@
 
     <a class="btn btn-light navMenuCompte" href="#" th:href="@{/infoPerso(compteId=${session.user.getUserId()})}">MES INFOS PERSO</a>
     <hr/>
-    <a class="btn btn-light navMenuCompte" href="#" th:href="@{/emprunt(compteId=${session.user.getUserId()})}">MES EMPRUNTS</a>
+    <a class="btn btn-light navMenuCompte" href="#" th:href="@{/emprunt}">MES EMPRUNTS</a>
     <hr/>
     <a class="btn btn-light navMenuCompte" href="#">Link</a>
     <hr/>
